Fix overflow-x, fix footer not changing theme closes #52

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -7,20 +7,22 @@
 	flex-direction: column;
 	padding: 0;
 	height: 100vh;
+	max-width: 100%;
 }
 
 .bottom-container {
-	width:100vw;
+	max-width: 100vw;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	align-items: start;
-	margin-top: 6rem; 
-	max-width: 100vw;
-	width: 100vw;
-	margin-right:0; 
+	margin: 2.5rem 0;
+	padding: 0;
 }
 
 .cards-container {
-	max-height: 85vh;
-	width: 90vw;
+	max-height: 70vh;
+	height: 100%;
+	width: 50vw;
 	overflow-y: scroll;
 }
