--- a/app/src/components/Footer.css
+++ b/app/src/components/Footer.css
@@ -1,15 +1,15 @@
 .footer {
-    background-color: #333; 
-    color: #fff; 
+    background-color: var(--bs-tertiary-bg); 
+    color: var(--bs-navbar-brand-color); 
     padding: 5px;
     text-align: center;
     position: static;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 .footer-icons a {
-    color: #fff;
+    color: var(--bs-navbar-brand-color);
     margin: 0px;
     text-decoration: none;
     font-size: 40px;
