--- a/app/src/components/TopNavBar.css
+++ b/app/src/components/TopNavBar.css
@@ -1,7 +1,8 @@
 .navbar {
-  width: 100vw;
-  position: fixed;
+  width: 100%;
+  position: sticky;
   top:0;
+  margin-top: -0.5rem; /* Necessary, since react bs navbars' padding is on the outside???*/
   z-index: 1;
 }
 
